js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/method-fn-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
class
C
{
m
(
)
{
function
fn
(
)
{
something
.
#
x
}
}
}
